--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -12,8 +12,11 @@ index
     <h1><a href="{% url 'user:logout' %}">logout</a> </h1>
     <h1><a href="{% url 'user:userinfo' %}">userinfo</a> </h1>
     <h1><a href="{% url 'user:posting' %}">posting</a> </h1>
+    <h1><a href="{% url 'user:contact' %}">contact</a> </h1>
 {% else %}
     <h1><a href="{% url 'user:login' %}">login</a></h1>
+    <h1><a href="/accounts/register/">register</a> </h1>
+
 {% endif %}
     {% for diary in diaries %}
         {{ diary.ddate }}<br/>
